--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/sqlite.png" alt=""></p>
+              <p class="skill-img"><img src="img/icon/unity.png" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">Unity</h3>
                 <p class="skill-text">
@@ -175,7 +175,15 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/sqlite.png" alt=""></p>
+              <p class="skill-img"><img src="img/icon/androidstudio.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">Android Studio</h3>
+                <p class="skill-text">
+                  Androidアプリ制作に使用。</p>
+              </div>
+            </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon/eclipse.png" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">Eclipse</h3>
                 <p class="skill-text">
