--- a/works-foodmanagement.html
+++ b/works-foodmanagement.html
@@ -53,12 +53,14 @@
       <article class="article section">
         <div class="article-inner">
           <h2 class="article-title">FoodManagementApp</h2>
-          <p class="article-imgspace">
-            <img class="article-img" src="img/works-sample.jpg" alt="">
-          </p>
+          <div class="article-displayspace">
+            <p class="article-display">
+              <img class="article-movie" src="img/works-sample.jpg" alt="">
+            </p>
+          </div>
           <div class="article-body">
             <div class="article-br">
-              <h3 class="article-info-title">ゲームの概要</h3>
+              <h3 class="article-info-title">アプリの概要</h3>
               <ul>
                 <li>冷蔵庫内の食品の賞味期限、消費期限を管理するAndoroidアプリです。</li>
               </ul>
@@ -72,14 +74,14 @@
             <div class="article-br">
               <h3 class="article-info-title">開発要件</h3>
               <ul>
-                <li>使用ゲームエンジン : Unity Version 2021.2.2f1</li>
-                <li>開発期間 : 2ヶ月 2週間</li>
-                <li>制作期間 : 2ヶ月</li>
+                <li>統合開発環境 : AndroidStudio</li>
+                <li>開発期間 : 1ヶ月 2週間</li>
+                <li>制作期間 : 1ヶ月 1週間</li>
               </ul>
             </div>
             
             <div class="article-br">
-              <h3 class="article-info-title">コーディングについて</h3>
+              <h3 class="article-info-title">制作について</h3>
               <ul>
                 <li>個人作成のゲームで企画、設計、計画、開発を一人で行っています。</li>
                 <li>糸の発射攻撃、糸を発射移動、巣を設置の3つのモードを実装しています。</li>
