--- a/works-increasespider.html
+++ b/works-increasespider.html
@@ -53,9 +53,12 @@
       <article class="article section">
         <div class="article-inner">
           <h2 class="article-title">Increase Spider</h2>
-          <p class="article-imgspace">
-            <img class="article-img" src="img/works-sample.jpg" alt="">
-          </p>
+          <div class="article-displayspace">
+            <p class="article-display">
+              <img class="article-movie" src="img/works-sample.jpg" alt="">
+            </p>
+          </div>
+          
           <div class="article-body">
             <div class="article-br">
               <h3 class="article-info-title">ゲームの概要</h3>
@@ -82,7 +85,7 @@
             </div>
             
             <div class="article-br">
-              <h3 class="article-info-title">コーディングについて</h3>
+              <h3 class="article-info-title">制作について</h3>
               <ul>
                 <li>個人作成のゲームで企画、設計、計画、開発を一人で行っています。</li>
                 <li>糸の発射攻撃、糸を発射移動、巣を設置の3つのモードを実装しています。</li>
