--- a/works-run.html
+++ b/works-run.html
@@ -53,15 +53,17 @@
       <article class="article">
         <div class="article-inner">
           <h2 class="article-title">RUN!!</h2>
-          <p class="article-imgspace">
-            <iframe class="article-img"
-              src="https://www.youtube.com/embed/fcyu0xEVuZw" 
-              title="YouTube video player" 
-              frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen>
-            </iframe>
-          </p>
+          <div class="article-displayspace">
+            <p class="article-display">
+              <iframe class="article-movie"
+                src="https://www.youtube.com/embed/fcyu0xEVuZw" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
+            </p>
+          </div>
           <div class="article-body">
             <div class="article-br">
               <h3 class="article-info-title">ゲームの概要</h3>
