--- a/works-shoottheinvaders.html
+++ b/works-shoottheinvaders.html
@@ -53,16 +53,17 @@
       <article class="article section">
         <div class="article-inner">
           <h2 class="article-title">Shoot The Invaders</h2>
-          <p class="article-imgspace">
-            <iframe  class="article-img" width="854" height="480"
-              src="https://www.youtube.com/embed/3XnlX1uZIOM" 
-              title="YouTube video player" 
-              frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen>
-            </iframe>
-          </p>
-          
+          <div class="article-displayspace">
+            <p class="article-display">
+              <iframe  class="article-movie" width="560" height="315"
+                src="https://www.youtube.com/embed/3XnlX1uZIOM" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
+            </p>
+          </div>
           <div class="article-body">
             <div class="article-br">
               <h3 class="article-info-title">ゲームの概要</h3>
