--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           <!-- slider -->
           <div class="slider">
             <ul>
-              <li><img class="sliderimage" src="img/slide_1.png" ></li>
-              <li><img class="sliderimage" src="img/slide_2.png" ></li>
-              <li><img class="sliderimage" src="img/slide_3.png" ></li>
+              <li><img class="sliderimage" src="img/work_run.png"></li>
+              <li><img class="sliderimage" src="img/work_shoottheinvaders.png"></li>
+              <li><img class="sliderimage" src="img/android-slide_1.png"></li>
             </ul>
           </div>
           <!-- slider --> 
@@ -99,7 +99,7 @@
               <p class="works-info">Unity作品 3DShooting</p>
             </a>
             <a class="works-item" href="works-foodmanagement.html">
-              <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
+              <p class="works-img"><img src="img/android-slide_1.png" alt="" /></p>
               <p class="works-name">FoodManagement</p>
               <p class="works-info">AndroidStudio作品 App</p>
             </a>
