--- a/works-foodmanagement.html
+++ b/works-foodmanagement.html
@@ -57,11 +57,10 @@
           <h2 class="article-title">FoodManagementApp</h2>
           <div class="gallery js-flickity"
               data-flickity-options='{ "wrapAround": true }'>
-              <div class="gallery-cell"><img class="gallery-img"src="img/slide_1.png"></div>
-              <div class="gallery-cell"><img class="gallery-img"src="img/slide_2.png"></div>
-              <div class="gallery-cell"><img class="gallery-img"src="img/slidephoto_1.jpeg"></div>
-              <div class="gallery-cell"><img class="gallery-img"src="img/slidephoto_2.jpeg"></div>
-              <div class="gallery-cell"><img class="gallery-img"src="img/slidephoto_3.jpg"></div>
+              <div class="gallery-cell"><img class="gallery-img"src="img/android-slide_1.png"></div>
+              <div class="gallery-cell"><img class="gallery-img"src="img/android-slide_2.png"></div>
+              <div class="gallery-cell"><img class="gallery-img"src="img/android-slide_3.png"></div>
+              <div class="gallery-cell"><img class="gallery-img"src="img/android-slide_4.png"></div>
           </div>
           <div class="article-body">
             <div class="article-br">
@@ -80,6 +79,19 @@
               <h3 class="article-info-title">開発要件</h3>
               <ul>
                 <li>統合開発環境 : AndroidStudio</li>
+                <ul class="article-list">
+                <li>compileSdk 31</li>
+                <li>mainSDK 23</li>
+                <li>targetSdk 31</li>
+                <li>sourceCompatibility JavaVersion.VERSION_1_8</li>
+                <li>targetCompatibility JavaVersion.VERSION_1_8</li>
+                </ul><br>
+                <li>データベース : SQLite</li>
+                <li>Build推奨ADV</li>
+                <ul class="article-list">
+                  <li>Nexus 5X</li>
+                  <li>Marshmallow API23 Android6.0 Google inc. system image x86</li>
+                </ul><br>
                 <li>開発期間 : 1ヶ月 2週間</li>
                 <li>制作期間 : 1ヶ月 1週間</li>
               </ul>
@@ -88,10 +100,10 @@
             <div class="article-br">
               <h3 class="article-info-title">制作について</h3>
               <ul>
-                <li>個人作成のゲームで企画、設計、計画、開発を一人で行っています。</li>
-                <li>糸の発射攻撃、糸を発射移動、巣を設置の3つのモードを実装しています。</li>
-                <li>蜘蛛の子の群れを実装しています。</li>
-                <li>蜘蛛の子の管理はListを使用する方法も考えましたが、配列を使用し実装しています。</li>
+                <li>個人作成のアプリで企画、設計、計画、開発を一人で行っています。</li>
+                <li>データベースはSQLiteを使用し、実装しています。</li>
+                <li>シンプルな色、デザインを使用することを念頭に置き制作しています。</li>
+                <li>賞味期限と現在の日付の差に合わせて描画される色が変わる処理を実装しています。</li>
               </ul>
             </div>
             
