--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
         <div class="split-body">
           <p class="split-title">荒瀬勇太</p>
           <p class="split-text">
-              やった人がクスっとでも笑えたら良いゲームを制作しています。<br>
-              もちろん苦しみながらPlayしている所も見れるようなゲームも制作しています。<br>
               福岡県福岡市博多区在住<br>
-              専門学校九州デザイナー学院ゲームクリエイター学科ゲームプログラム専攻所属<br>
+              専門学校九州デザイナー学院ゲーム・CG学科ゲームプログラム専攻所属<br>
               プログラミングを体験してから今年で3年目になります。<br>
               現在は、主にC#,C++,Javaを学習しています。<br>
           </p>
@@ -68,9 +66,9 @@
           <!-- slider -->
           <div class="slider">
             <ul>
+              <li><img class="sliderimage" src="img/works-dummy-thumb.jpg"></li>
               <li><img class="sliderimage" src="img/work_run.png"></li>
               <li><img class="sliderimage" src="img/work_shoottheinvaders.png"></li>
-              <li><img class="sliderimage" src="img/android-slide_1.png"></li>
             </ul>
           </div>
           <!-- slider --> 
@@ -104,7 +102,7 @@
               <p class="works-info">AndroidStudio作品 App</p>
             </a>
             <a class="works-item" href="works-grawupshooter.html">
-              <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
+              <p class="works-img"><img src="img/work_growupshooter.png" alt="" /></p>
               <p class="works-name">Graw up Shooter</p>
               <p class="works-info">Eclipse作品 2DShooting</p>
             </a>
@@ -119,7 +117,9 @@
           <h2 class="title">SKILL</h2>
           <div class="skill-list">
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/c-plusplus.png" alt=""></p>
+              <a href="https://docs.microsoft.com/ja-jp/cpp/cpp/?view=msvc-170" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/c-plusplus.png" alt=""></p>
+              </a>
               <div class="skill-body">
                   <h3 class="skill-name">C++</h3>
                 <p class="skill-text">
@@ -127,7 +127,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/c-sharp.png" alt=""></p>
+              <a href="https://docs.microsoft.com/ja-JP/dotnet/csharp/" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/c-sharp.png" alt=""></p>
+              </a>
               <div class="skill-body">
                 <h3 class="skill-name">C#</h3>
                 <p class="skill-text">
@@ -135,7 +137,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/java.png" alt=""></p>
+              <a href="https://www.oracle.com/jp/java/" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/java.png" alt=""></p>
+              </a>
               <div class="skill-body">
                 <h3 class="skill-name">Java</h3>
                 <p class="skill-text">
@@ -143,7 +147,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/wordpress.png" alt=""></p>
+              <a href="https://wordpress.org/" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/wordpress.png" alt=""></p>
+              </a>
               <div class="skill-body">
                   <h3 class="skill-name">WordPress</h3>
                 <p class="skill-text">
@@ -151,7 +157,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/vb.png" alt=""></p>
+              <a href="https://docs.microsoft.com/ja-JP/dotnet/visual-basic/" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/vb.png" alt=""></p>
+              </a>
               <div class="skill-body">
                   <h3 class="skill-name">Visual Basic</h3>
                   <p class="skill-text">
@@ -159,7 +167,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/sqlite.png" alt=""></p>
+              <a href="https://www.sqlite.org/index.html" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/sqlite.png" alt=""></p>
+              </a>
               <div class="skill-body">
                 <h3 class="skill-name">SQLite</h3>
                 <p class="skill-text">
@@ -167,7 +177,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/unity.png" alt=""></p>
+              <a href="https://unity.com/ja" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/unity.png" alt=""></p>
+              </a>
               <div class="skill-body">
                 <h3 class="skill-name">Unity</h3>
                 <p class="skill-text">
@@ -175,7 +187,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/androidstudio.png" alt=""></p>
+              <a href="https://developer.android.com/studio?hl=ja" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/androidstudio.png" alt=""></p>
+              </a>
               <div class="skill-body">
                 <h3 class="skill-name">Android Studio</h3>
                 <p class="skill-text">
@@ -183,7 +197,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon/eclipse.png" alt=""></p>
+              <a href="https://www.eclipse.org/" target="_blank" rel="noopener">
+                <p class="skill-img"><img src="img/icon/eclipse.png" alt=""></p>
+              </a>
               <div class="skill-body">
                 <h3 class="skill-name">Eclipse</h3>
                 <p class="skill-text">
