--- a/works-grawupshooter.html
+++ b/works-grawupshooter.html
@@ -55,7 +55,13 @@
           <h2 class="article-title">Graw up Shooter</h2>
           <div class="article-displayspace">
             <p class="article-display">
-              <img class="article-movie" src="img/works-sample.jpg" alt="">
+              <iframe class="article-movie"
+                src="https://www.youtube.com/embed/TyJTH-PCmD8"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
             </p>
           </div>
           
@@ -95,7 +101,7 @@
             
             <div class="article-br">
               <h3 class="article-info-title">URL</h3>
-              <ul><li><a href="" target="_blank" rel="noopener">GitHub</a></li></ul>
+              <ul><li><a href="https://github.com/yutaarase/Grow-up-Shooter.git" target="_blank" rel="noopener">GitHub</a></li></ul>
             </div>
 
           </div>
