--- a/index.html
+++ b/index.html
@@ -216,11 +216,9 @@
         <div class="inner">
           <h2 class="title">CONTACT</h2>
           <p class="lead">
-            お問い合わせは、<br class="sp-only">SNSかメールにてお願いいたします。
+            お問い合わせは、<br class="sp-only">メールにてお願いいたします。
           </p>
           <div class="contact-list">
-            <a class="contact-item" href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
-            <a class="contact-item" href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
             <span class="contact-item">企業の方 : yuuta.2003.2.25@icloud.com</span>
             <span class="contact-item">一般の方 : arase210601@eggnet.ac.jp</span>
           </div>
