--- a/works-grawupshooter.html
+++ b/works-grawupshooter.html
@@ -83,6 +83,7 @@
             <div class="article-br">
               <h3 class="article-info-title">開発要件</h3>
               <ul>
+                <li>使用言語 : Java</li>
                 <li>統合開発環境 : Eclipse</li>
                 <li>開発期間 : 2ヶ月</li>
                 <li>制作期間 : 1ヶ月 2週間</li>
