--- a/works-run.html
+++ b/works-run.html
@@ -81,6 +81,7 @@
             <div class="article-br">
               <h3 class="article-info-title">開発要件</h3>
               <ul>
+                <li>使用言語 : C#</li>
                 <li>使用ゲームエンジン : Unity Version 2021.2.2f1</li>
                 <li>開発期間 : 1ヶ月</li>
                 <li>制作期間 : 2週間</li>
