--- a/works-foodmanagement.html
+++ b/works-foodmanagement.html
@@ -78,6 +78,7 @@
             <div class="article-br">
               <h3 class="article-info-title">開発要件</h3>
               <ul>
+                <li>使用言語 : Java</li>
                 <li>統合開発環境 : AndroidStudio</li>
                 <ul class="article-list">
                 <li>compileSdk 31</li>
