--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <!-- slider -->
           <div class="slider">
             <ul>
-              <li><img class="sliderimage" src="img/work_Increase Spider.png"></li>
+              <li><img class="sliderimage" src="img/work_increasespider.png"></li>
               <li><img class="sliderimage" src="img/work_run.png"></li>
               <li><img class="sliderimage" src="img/work_shoottheinvaders.png"></li>
             </ul>
@@ -82,7 +82,7 @@
           <h2 class="title">WORKS</h2>
           <div class="works-list">
             <a class="works-item" href="works-increasespider.html">
-              <p class="works-img"><img src="img/work_Increase Spider.png" alt="" /></p>
+              <p class="works-img"><img src="img/work_increasespider.png" alt="" /></p>
               <p class="works-name">Increase Spider</p>
               <p class="works-info">Unity作品 3DAction</p>
             </a>
