--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
 
       <!-- split -->
-      <div class="split section">
+      <div class="split">
         <div class="split-body">
           <p class="split-title">荒瀬勇太</p>
           <p class="split-text">
@@ -63,15 +63,15 @@
           </p>
         </div>
 
-          <!-- slider -->
-          <div class="slider">
-            <ul>
-              <li><img class="sliderimage" src="img/work_increasespider.png"></li>
-              <li><img class="sliderimage" src="img/work_run.png"></li>
-              <li><img class="sliderimage" src="img/work_shoottheinvaders.png"></li>
-            </ul>
-          </div>
-          <!-- slider --> 
+        <!-- slider -->
+        <div class="slider">
+          <ul>
+            <li><img class="sliderimage" src="img/work_increasespider.png"></li>
+            <li><img class="sliderimage" src="img/work_run.png"></li>
+            <li><img class="sliderimage" src="img/work_shoottheinvaders.png"></li>
+          </ul>
+        </div>
+        <!-- slider --> 
 
       </div> 
       <!-- /split -->
